# QuickRun

./: DARK_THEME_FIX.md  QUICKRUN_GUIDE.md  README.md  about.html  index.html  package-lock.json  package.json  settings.html  update-application.ps1
.github/workflows/: release.yml
src/: about.ts  main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  runner.rs  updater.rs
