[package]
name = "quickrun"
version = "0.1.0"
description = "Windows Run-style launcher with Alt+Space hotkey and system tray integration"
authors = ["Swatto"]
repository = "https://github.com/Swatto86/QuickRun"
homepage = "https://github.com/Swatto86/QuickRun"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quickrun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.55.0"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json"] }


